--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "pathwayz0",
-  "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^24.5.0",
@@ -15,6 +19,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.2.1",
     "postcss": "^8.5.6",
