--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.13",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
