--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "peerDependencies": {
     "typescript": "^5.9.2"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
